--- a/app/src/main/res/layout/fragment_create_subreddit.xml
+++ b/app/src/main/res/layout/fragment_create_subreddit.xml
@@ -50,7 +50,8 @@
                 android:layout_height="wrap_content"
                 android:hint="Subreddit name"
                 android:textColorHint="#FFFFFF"
-                android:textCursorDrawable="@drawable/color_cursor" />
+                android:textCursorDrawable="@drawable/color_cursor"
+                />
         </com.google.android.material.textfield.TextInputLayout>
 
 
@@ -94,7 +95,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:height="55dp"
-                android:backgroundTint="#FF5700"
+                android:backgroundTint="#0077D6"
                 android:text="Create"
                 android:textColor="#FFFFFF"
                 android:textColorHighlight="#FFFFFF"
