--- a/app/src/main/res/layout/item_post.xml
+++ b/app/src/main/res/layout/item_post.xml
@@ -7,12 +7,13 @@
     android:padding="0dp"
     android:background="#151515"
     android:minHeight="100dp">
+<LinearLayout
+    android:layout_width="match_parent"
+    android:layout_height="wrap_content"
+    android:id="@+id/post_id"
+    android:orientation="vertical">
 
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="0.3dp"
-        android:layout_weight="1"
-        android:background="#333333" />
+
 
     <TextView
         android:id="@+id/post_subreddit_name"
@@ -53,16 +54,16 @@
         android:paddingTop="4dp"
         android:paddingHorizontal="10dp"
         android:textSize="15sp" />
-<!--    <LinearLayout-->
-<!--        android:layout_width="match_parent"-->
-<!--        android:id="@+id/vid_Container"-->
-<!--        android:layout_height="300dp">-->
-<!--        <VideoView-->
-<!--            android:id="@+id/post_video_content"-->
-<!--            android:layout_width="match_parent"-->
-<!--            android:layout_height="match_parent"-->
-<!--            android:padding="10dp"/>-->
-<!--    </LinearLayout>-->
+    <!--    <LinearLayout-->
+    <!--        android:layout_width="match_parent"-->
+    <!--        android:id="@+id/vid_Container"-->
+    <!--        android:layout_height="300dp">-->
+    <!--        <VideoView-->
+    <!--            android:id="@+id/post_video_content"-->
+    <!--            android:layout_width="match_parent"-->
+    <!--            android:layout_height="match_parent"-->
+    <!--            android:padding="10dp"/>-->
+    <!--    </LinearLayout>-->
     <com.google.android.exoplayer2.ui.PlayerView
         android:padding="10dp"
         android:id="@+id/player_view"
@@ -126,19 +127,21 @@
                 android:textColor="#FF737373"
                 android:textSize="14sp" />
         </LinearLayout>
-<!--        <TextView-->
-<!--            android:layout_width="wrap_content"-->
-<!--            android:layout_height="match_parent"-->
-<!--            android:gravity="center"-->
-<!--            android:layout_marginHorizontal="0dp"-->
-<!--            android:text="Comments"-->
-<!--            android:textColor="#FFFFFF"-->
-<!--            android:textSize="16sp" />-->
+        <!--        <TextView-->
+        <!--            android:layout_width="wrap_content"-->
+        <!--            android:layout_height="match_parent"-->
+        <!--            android:gravity="center"-->
+        <!--            android:layout_marginHorizontal="0dp"-->
+        <!--            android:text="Comments"-->
+        <!--            android:textColor="#FFFFFF"-->
+        <!--            android:textSize="16sp" />-->
 
 
     </LinearLayout>
-<!--    <LinearLayout-->
-<!--        android:layout_width="match_parent"-->
-<!--        android:layout_height="0.3dp"-->
-<!--        android:background="#333333" />-->
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="0.3dp"
+        android:layout_weight="1"
+        android:background="#333333" />
+</LinearLayout>
 </LinearLayout>
