--- a/app/src/main/res/navigation/nav_graph0.xml
+++ b/app/src/main/res/navigation/nav_graph0.xml
@@ -30,13 +30,18 @@
             app:destination="@id/setUsername" />
         <action
             android:id="@+id/action_login_to_mainPage"
+            app:popUpToInclusive="true"
             app:destination="@id/mainPage" />
     </fragment>
     <fragment
         android:id="@+id/mainPage"
         android:name="com.example.orionhub.MainPage"
         android:label="fragment_main_page"
-        tools:layout="@layout/fragment_main_page" />
+        tools:layout="@layout/fragment_main_page" >
+        <action
+            android:id="@+id/action_mainPage_to_startPage"
+            app:destination="@id/startPage" />
+    </fragment>
     <fragment
         android:id="@+id/startPage"
         android:name="com.example.orionhub.StartPage"
@@ -50,6 +55,7 @@
             app:destination="@id/login" />
         <action
             android:id="@+id/action_startPage_to_mainPage"
+            app:popUpToInclusive="true"
             app:destination="@id/mainPage" />
     </fragment>
     <fragment
@@ -59,6 +65,7 @@
         tools:layout="@layout/fragment_intresteditems" >
         <action
             android:id="@+id/action_intresteditems_to_mainPage"
+            app:popUpToInclusive="true"
             app:destination="@id/mainPage" />
     </fragment>
     <fragment
